# mcp-inventory

./: CHANGELOG.md  Cargo.toml  README.md  mcp-server.toml
src/: lib.rs  main.rs  server.rs  store.rs  types.rs
