[workspace]

[package]
name = "mcp-inventory"
version = "1.1.0"
edition = "2024"
description = "Inventory & Warehouse MCP server — stock management, BOM, locations, transfers, reorder alerts, lot tracking, reservations"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-inventory"
keywords = ["mcp", "inventory", "warehouse", "stock", "supply-chain"]
categories = ["api-bindings"]

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
